fix: incorrect text and button wrapping on mobile
hide the button and label altogether at certain widths

--- a/src/assets/styles/palette.scss
+++ b/src/assets/styles/palette.scss
@@ -58,7 +58,6 @@
 	padding: 0.8em 0px;
 	text-align: center;
 	color: rgb(76, 86, 106);
-	transition: color 400ms ease-in-out 0s;
 }
 
 #icon-copy {
@@ -70,11 +69,39 @@
 	top: 0.15em;
 }
 
-.label button {
+.swatch-box .label button {
 	display: inline;
 	background: none;
+	box-shadow: none;
 	margin-left: 5px;
 	padding: 4px;
 	border: none;
 	cursor: pointer;
+}
+
+
+@media screen and (max-width: 800px) {
+	.swatch-box .label button {
+		display: none;
+	}
+}
+
+/* The following @media rules are to stop displaying the label altogether whent the screen width is too small. The .large class is for palettes with more than 5 swatches, and the .small class is for palettes with 3 or less swatches. */
+
+@media screen and (max-width: 500px) {
+	.palette.large .label {
+		display: none;
+	}
+}
+
+@media screen and (max-width: 405px) {
+	.palette:not(.small) .label {
+		display: none;
+	}
+}
+
+@media screen and (max-width: 330px) {
+	.palette.small .label {
+		display: none;
+	}
 }
